# SimpleH264

./: .gitignore  .travis.yml  CMakeLists.txt  building.sh  unittesting.sh
include/: bitstream.h  bitutil.h  context.h  debug.h  golomb.h  hrd_parser.h  io.h  io_h264.h  nal.h  nalu.h  nalu_header.h  nalu_parser.h  parser.h  sps.h  sps_parser.h  vui.h  vui_parser.h
include/h264/: hrd.h  nalu.h  pps.h  sl_header.h  slice.h  sps.h  vui.h
include/parser/: hrd_parser.h  nalu_parser.h  parser.h  pps_parser.h  slice_parser.h  sps_parser.h  vui_parser.h
include/util/: bitutil.h  golomb.h  io_h264.h  math.h
src/: bitstream.cpp  context.cpp  hrd_parser.cpp  main.cpp  nal.cpp  nalu.cpp  nalu_header.cpp  nalu_parser.cpp  pps_parser.cpp  slice_parser.cpp  sps.cpp  sps_parser.cpp  vui_parser.cpp
test/: CMakeLists.txt
test/unit/: Context_test.cpp  Golomb_test.cpp  HRD_test.cpp  NAL_test.cpp  PPS_test.cpp  SPS_test.cpp  SliceHeader_test.cpp  VUI_test.cpp  test_main.cpp
